Additional issues detected by sonarlint fixed